crates/oxc_css/tests/error/qualified-rule/missing-ending.snap
---
source: crates/oxc_css/tests/error.rs
---
error: expect token `}`, but found `<eof>`
  ┌─ missing-ending.css:2:1
  │
2 │ 
  │ ^


